# python-ci-simulation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
currency_converter/: app.py  logic.py
src/: app.py  logic.py
tests/: test_logic.py
