[project]
name = "ci-cd"
version = "0.1.0"
description = "A production-ready currency converter with full CI/CD quality gates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

